[gd_scene load_steps=5 format=3 uid="uid://bopgweix7eqph"]

[ext_resource type="Script" uid="uid://dqc3mhtyf18i" path="res://scripts/audio_manager.gd" id="1_3asnw"]
[ext_resource type="AudioStream" uid="uid://baum5hec44xv8" path="res://audio/BigGun01.wav" id="2_m6ggh"]
[ext_resource type="AudioStream" uid="uid://djvsm3jlk1wga" path="res://audio/BigGun02.wav" id="3_aoitu"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_njtn3"]
streams_count = 2
stream_0/stream = ExtResource("2_m6ggh")
stream_1/stream = ExtResource("3_aoitu")

[node name="AudioManager" type="Node"]
script = ExtResource("1_3asnw")

[node name="Player_UI" type="AudioStreamPlayer" parent="."]
bus = &"UI"

[node name="Player_Music" type="AudioStreamPlayer" parent="."]
bus = &"Music"

[node name="Player_Effects" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_njtn3")
bus = &"Effects"
